# rust-workshop

./: .gitignore  Cargo.toml  README.md  RustForDotnetDevs.sln  devcontainer.json
.github/workflows/: rust.yml
docs/: docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
docs/docs/: intro.md  prerequisites.md
docs/docs/module0/: 1_why.md  2_why_not.md  3_when_to_choose.md  _category_.json
docs/docs/module1/: 1_intro.md  1_prerequisites.md  2_command_line_tooling.md  2_intro.md  3_challenge.md  3_program_structure.md  4_package_management.md  5_challenge.md  _category_.json  create-a-document.md
docs/docs/module10/: 1_intro.md  2_logging.md  3_tracing.md  4_challenge.md  5_challenge.md  _category_.json  intro.md
docs/docs/module11/: 1_intro.md  2_challenge.md  _category_.json  intro.md
docs/docs/module2/: 1_intro.md  2_borrowing.md  3_ownership.md  4_error_handling.md  5_concurrency.md  6_memory-safety.md  7_memory_efficiency.md  8_challenge.md  8_mutability.md  9_challenge.md  _category_.json  intro.md  memory-safety.md  sustainability.md
docs/docs/module3/: 1_intro.md  2_datatypes.md  3_0_mutability.md  3_5_mutability_part_2.md  3_mutability.md  3_shadowing.md  4_functions.md  4_structs-and-classes.md  5_enums.md  5_structs-and-classes.md  6_challenge.md  6_enums.md  7_challenge.md  _category_.json  enums.md  intro.md  mutability.md  structs-and-classes.md
docs/docs/module4/: 1_intro.md  2_serde.md  3_rust_macros.md  4_implementing-serialization.md  5_challenge.md  _category_.json  challenge.md  intro.md
docs/docs/module5/: 1_intro.md  2_tokio.md  3_axum.md  4_dependency_injection.md  5_json_serialization.md  6_challenge.md  _category_.json  intro.md
docs/docs/module6/: 1_intro.md  2_rust_modules.md  3_structuring_code.md  4_challenge.md  _category_.json  intro.md
docs/docs/module7/: 1_intro.md  2_traits.md  3_generics.md  4_lifetimes.md  5_challenge.md  _category_.json  intro.md
docs/docs/module8/: 1_intro.md  2_sqlx.md  3_errorhandling.md  4_writing_sql_queries.md  5_database_migrations.md  6_configuration.md  7_challenge.md  _category_.json  intro.md
docs/docs/module9/: 1_intro.md  2_testing.md  3_mocking.md  4_challenge.md  _category_.json  intro.md
docs/docs/resources/: 1_resources.md  _category_.json
docs/src/components/HomepageFeatures/: index.tsx
docs/src/css/: custom.css
docs/src/pages/: index.tsx
src/demos/1-memory-safety/rust_app/: Cargo.toml
src/demos/1-memory-safety/rust_app_memory_demo/: Cargo.toml
src/demos/2-sustainability/rust_app/: Cargo.toml
src/examples/: Cargo.toml
src/examples/module1/rust_app/: README.md
src/examples/module10/: docker-compose.yml
src/examples/module10/integration-tests/: Cargo.toml
src/examples/module11/rust_app/: Cargo.toml
src/examples/module2/rust_app/:  README.md  Cargo.toml
src/examples/module3/DotnetDataTypes/: Program.cs
src/examples/module9/: docker-compose.yml
src/examples/module9/rust_app/: Cargo.toml  config.json
src/examples/module9/rust_app/src/: core.rs  data_access.rs  lib.rs  main.rs
src/examples/module9/rust_app/src/core/: configuration.rs  core.rs
src/module3/DotnetDataTypes/: Program.cs
src/module3/rust_app/: Cargo.toml
src/module3/rust_app_final/: Cargo.toml
src/module4/DotnetSerialization/: JsonSerializer.cs
src/module4/rust_app_final/: Cargo.toml
src/module5/DotnetWebApi/: Program.cs  User.cs
src/module6/DotnetWebApi/: Program.cs
src/module7/DotnetWebApi/: DotnetWebApi.http
src/module7/rust_app/: Cargo.toml
src/module8/DotnetWebApi/: Program.cs
src/module8/rust_app/: Cargo.toml
src/module9/DotnetWebApi/: DotnetWebApi.csproj  appsettings.Development.json
src/module9/DotnetWebApi.UnitTest/: UserTests.cs
src/module9/rust_app/: Cargo.toml
src/module9/rust_app/src/: main.rs
src/scratch/: scratch.md
src/solutions/: Cargo.toml
src/solutions/module1/rust_app/: Cargo.toml
src/solutions/module1/rust_app/src/: main.rs
src/solutions/module10/integration-tests/: Cargo.toml
src/solutions/module10/rust_app/: Cargo.toml
src/solutions/module10/rust_app/src/: core.rs  data_access.rs  main.rs
src/solutions/module10/rust_app/src/core/: core.rs
src/solutions/module11/: docker-compose.yml
src/solutions/module11/integration-tests/: Cargo.toml
src/solutions/module11/integration-tests/tests/: integration_test.rs
src/solutions/module11/rust_app/: Cargo.toml  config.json
src/solutions/module11/rust_app/src/: api.rs  data_access.rs  lib.rs  worker.rs
src/solutions/module11/rust_app/src/core/: configuration.rs
src/solutions/module2/1-memory-safety/rust_app_memory_demo/: Cargo.toml
src/solutions/module2/2-sustainability/DotnetConsoleApp/: Program.cs
src/solutions/module2/2-sustainability/rust_app/: Cargo.toml
src/solutions/module2/rust_app/src/: main.rs
src/solutions/module3/rust_app/: Cargo.toml
src/solutions/module3/rust_app/src/: main.rs
src/solutions/module4/rust_app/: Cargo.toml
src/solutions/module4/rust_app/src/: main.rs
src/solutions/module5/rust_app/: Cargo.toml
src/solutions/module5/rust_app/src/: main.rs
src/solutions/module6/rust_app/: Cargo.toml
src/solutions/module6/rust_app/src/: core.rs  data_access.rs  lib.rs  main.rs
src/solutions/module6/rust_app/src/core/: mod.rs
src/solutions/module7/rust_app/: Cargo.toml
src/solutions/module7/rust_app/src/: lib.rs  main.rs
src/solutions/module7/rust_app/src/core/: core.rs  mod.rs
src/solutions/module8/rust_app/: Cargo.toml  config.json
src/solutions/module8/rust_app/src/: data_access.rs  lib.rs  main.rs
src/solutions/module8/rust_app/src/core/: core.rs
src/solutions/module9/: Cargo.toml
src/solutions/module9/rust_app/: Cargo.toml
src/solutions/module9/rust_app/.sqlx/: query-a48a84a9f6fe43f4ef3e7e575e3f28af81b3bb5ebf8dac29bbe5adee2b75bde7.json
src/solutions/module9/rust_app/src/: data_access.rs  lib.rs
src/solutions/module9/rust_app/src/core/: core.rs  mod.rs
(+75 files in other folders)
