[workspace]
resolver = "2"
members = [
    "src/module1/rust_app",
    "src/module2/1-memory-safety/rust_app",
    "src/module2/1-memory-safety/rust_app_memory_demo",
    "src/module2/2-sustainability/rust_app",
    "src/module3/rust_app",
    "src/module3/rust_app_enums",
    "src/module4/rust_app",
    "src/module5/rust_app",
    "src/module6/rust_app",
    "src/module7/rust_app",
    "src/module8/rust_app",
    "src/module9/rust_app",
]

[workspace.dependencies]
