[package]
name = "integration-tests"
version = "0.1.0"
edition = "2024"
resolver = "2"

[dev-dependencies]
tokio = { version = "1.38", features = ["macros", "rt-multi-thread"] }
serde_json = "1.0"
reqwest = { version = "0.12", default-features = false, features = [
  "rustls-tls",
  "http2",
] }

[dependencies.uuid]
version = "1.16.0"
# Lets you generate random UUIDs
features = [
    "v4",
]

[dependencies.rdkafka]
version     = "0.37.0"
default-features = false
features    = ["tokio", "ssl"]
