[package]
name = "module_11_rust_app"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.96"
async-trait = "0.1.83"
axum = { version = "0.8.1", features = ["macros"] }
serde = { version = "1.0.218", features = ["derive"] }
thiserror = "2"
tokio = { version = "1", features = ["full", "signal"] }
sqlx = {version = "0.8.6", features = ["postgres", "runtime-tokio"]}
argon2 = "0.5.3"
regex = "1.11.1"
mockall = {version = "0.13.1"}
figment = {version="0.10.19", features = ["json", "env"]}
log = {version = "0.4.27"}
structured-logger = "1.0.4"
tracing = "0.1.41"
tracing-opentelemetry = "0.30.0"
tracing-subscriber = { version = "0.3.19", default-features = false, features = ["registry", "std", "fmt"] }
opentelemetry = { version = "0.29.1", default-features = false, features = ["trace"] }
opentelemetry_sdk = { version = "0.29.0", default-features = false, features = ["trace"] }
opentelemetry-semantic-conventions = { version = "0.29.0", features = ["semconv_experimental"] }
opentelemetry-otlp = { version = "0.29.0", features = ["metrics", "grpc-tonic"] }

[dev-dependencies]


[lib]
path = "src/lib.rs"
name = "rust_users_lib"

[[bin]]
path = "src/api.rs"
name = "rust_users"

[[bin]]
path = "src/worker.rs"
name = "rust_users_worker"

[dependencies.rdkafka]
version     = "0.37.0"
default-features = false
features    = ["tokio", "ssl"]
