[package]
name = "module_6_rust_app"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.4", features = ["macros"] }
serde = { version = "1.0.218", features = ["derive"] }
tokio = { version = "1", features = ["full"] }

[lib]
path = "src/lib.rs"
name = "rust_users_lib"

[[bin]]
path = "src/main.rs"
name = "rust_users"